# nba-fantasy-optimize

./: .envrc  .gitignore  Pipfile  README.md  minimax_lineup.py  optimize_lineup.py  pyproject.toml  setup.py  shell.nix  simulate_matchup.py  trade.py
nba_matchup/: __init__.py  free_agents.py  league.py  opt.py  player.py  pretty_print.py  sim.py  stats.py  team.py  util.py  yfs.py
nba_stats/: __init__.py  extra_players.py  model.py  player.py  roster.py  schedule.py  season.py  util.py  yfs.py
